# Traveloop

./: .env.example  README.md  config.py  debug_feed.py  main.py  package.json  pyproject.toml  requirements.txt  seed_community_trips.py  tailwind.config.js  todo  wsgi.py
app/: __init__.py
app/models/: __init__.py  activity.py  stop.py  user.py
app/routes/: __init__.py  auth.py  itinerary_api.py  locations.py  settings.py  trip_api.py
app/services/: __init__.py  location_service.py  routing_service.py  trip_service.py  weather_service.py
app/static/css/: globals.css
app/static/js/: app.js  locations.js  theme.js  trip.js
app/templates/: base.html
app/templates/components/: footer.html  navbar.html  sidebar.html
app/templates/pages/: community.html  dashboard.html  home.html  my_trips.html  profile.html  settings.html  trip_detail.html
app/templates/pages/auth/: login.html  signup.html
app/utils/: __init__.py
config/: __init__.py
docs/: SETUP.md  STRUCTURE.md
scratch/: test_api.py
scripts/: __init__.py  init_db.py
tests/: __init__.py
