[project]
name = "traveloop"
version = "0.1.0"
description = "A complete smart travel planning platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-Login==0.6.3",
    "python-dotenv==1.0.0",
]

[tool.uv]
dev-dependencies = []
